JavaScriptCore:

2009-01-19  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        Bug 23409: REGRESSION: RegExp 'replace()' function improperly processes '$$'
        <https://bugs.webkit.org/show_bug.cgi?id=23409>
        <rdar://problem/6505723>

        Test: fast/js/string-replace-3.html

        * runtime/StringPrototype.cpp:
        (JSC::substituteBackreferences): Remove code that adds an extra $ -- not sure
        how this ever worked.

LayoutTests:

2009-01-19  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        Bug 23409: REGRESSION: RegExp 'replace()' function improperly processes '$$'
        <https://bugs.webkit.org/show_bug.cgi?id=23409>
        <rdar://problem/6505723>

        * fast/js/resources/string-replace-3.js:
        * fast/js/string-replace-3-expected.txt:



Canonical link: https://commits.webkit.org/32238@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40042 268f45cc-cd09-0410-ab3c-d52691b4dbfc