LayoutTests/fast/js/resources/string-replace-3.js
@@ -21,12 +21,12 @@ shouldBe("testString.replace('the end', 'nice. $`a picture')",
 shouldBe('testString.replace("feel fin", "am gon$\' By")',
          "\"It's the end of the world as we know it, and I am gone. Bye.\"");
 
-shouldBe("testString.replace(/end/, '$0 $00 $1 $01 $2 $12 $9 $99 $1a $11a')",
-         "\"It's the $0 $00 $1 $01 $2 $12 $9 $99 $1a $11a of the world as we know it, and I feel fine.\"");
-shouldBe("testString.replace('end', '$0 $00 $1 $01 $2 $12 $9 $99 $1a $11a')",
-         "\"It's the $0 $00 $1 $01 $2 $12 $9 $99 $1a $11a of the world as we know it, and I feel fine.\"");
+shouldBe("testString.replace(/end/, '$$ $0 $00 $1 $01 $2 $12 $9 $99 $1a $11a')",
+         "\"It's the $ $0 $00 $1 $01 $2 $12 $9 $99 $1a $11a of the world as we know it, and I feel fine.\"");
+shouldBe("testString.replace('end', '$$ $0 $00 $1 $01 $2 $12 $9 $99 $1a $11a')",
+         "\"It's the $ $0 $00 $1 $01 $2 $12 $9 $99 $1a $11a of the world as we know it, and I feel fine.\"");
 
-shouldBe("testString.replace(/(e)(n)(d) (o)(f) (t)(h)(e) (w)(o)(r)(l)(d)/, '$0 $00 $1 $01 $2 $12 $9 $99 $1a $11a')",
-         "\"It's the $0 $00 e e n l w w9 ea ra as we know it, and I feel fine.\"");
+shouldBe("testString.replace(/(e)(n)(d) (o)(f) (t)(h)(e) (w)(o)(r)(l)(d)/, '$$ $0 $00 $1 $01 $2 $12 $9 $99 $1a $11a')",
+         "\"It's the $ $0 $00 e e n l w w9 ea ra as we know it, and I feel fine.\"");
 
 var successfullyParsed = true;
